Minor cleanup of deprecated method